--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "visualai",
+  "name": "mvp2",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,7 +13,6 @@
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.49.4",
-    "@types/cytoscape": "^3.21.9",
     "cytoscape": "^3.31.2",
     "d3-force": "^3.0.0",
     "next": "15.2.4",
@@ -26,6 +25,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/cytoscape": "^3.21.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
